--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
     <head>
         <title>BELUM TERKONSEP</title>
+        <link rel="icon" href=
+"https://raw.githubusercontent.com/jaekusuma/justSPAMofScreenshotAndAnotherImageFile/refs/heads/main/CAT.png"
+        type="image/x-icon" />
     </head>
     <body>
-        <p>
+        <p style="font-size: 100px; text-align: center;">
             BELON JADI NTAR SABAR
         </p>
     </body>
